--- a/src/styles/Timeline.css
+++ b/src/styles/Timeline.css
@@ -109,7 +109,7 @@ WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN 
 .cd-timeline-content {
   position: relative;
   margin-left: 60px;
-  background: var(--color-hover);
+  background: var(--color-select);
   border-radius: 0.25em;
   padding: 1em;
   box-shadow: 0 3px 0 #8892b0;
