--- a/src/styles/SideNavBar.css
+++ b/src/styles/SideNavBar.css
@@ -33,7 +33,7 @@
   margin: 0 0 40px 0;
   color: var(--off-white);
   cursor: pointer;
-  font-size: 1.25rem;
+  font-size: 28px;
   padding: 0;
   transition: color 0.2s;
   display: flex;
@@ -43,13 +43,14 @@
 .side-navbar button.star-btn:hover {
   color: var(--green-bright) !important;
   scale:1.1;
-  filter: drop-shadow(0 3px 4px rgba(0, 255, 85, 0.7));
   transition: var(--transition);
 }
 
-.side-navbar button.star-btn svg {
-  color: inherit;
-  fill: currentColor;
+.sidenav-icon {
+  width: 22px;
+  height: 22px;
+  margin: 0 0 20px 0;
+
 }
 
 @media (max-width: 1200px) {
